Switched to lighter version of faucet images
Added glucose
Fixed z-ordering for sucrose
# 0.00.86 (55030) Aug 10, 2011
Removed ethanol kit
# 0.00.85 (55028) Aug 10, 2011
Improved graphics for faucets
# 0.00.84 (55011) Aug 10, 2011
Micro tab: Use the same scale factor for ParticleCountTable
Water tab: Wired up checkbox for "show water charges"
Water tab: Added a checkbox for "show water charges", not wired up yet
Water tab: Added play/pause buttons
# 0.00.83 (54884) Aug 5, 2011
Micro tab: Fixed: Particles bounce on the surface of the water sometimes
Micro tab: Added random motion component to particles flowing to the drain
Micro tab: Fixed: Partially submerged particles only move one direction and get stuck
Micro tab: Fixed: The sugar particles can get stuck after you remove the max amount of solution from the drain
Micro tab: Fixed: The ions and molecules can fly out of the solution when you add solute
# 0.00.82 (54873) Aug 4, 2011
Micro tab: Prevent dissolving from crystals during evaporation
Micro tab: Removed the "dash mark" near the play button
# 0.00.81 (54857) Aug 4, 2011
Micro tab: Fixed: Particles get stuck in the corners of the beaker
# 0.00.80 (54855) Aug 4, 2011
Micro tab: If a crystal dissolves down to 1 particle, then convert the 1-particle crystal to dissolved solute
Micro tab: Require two particles for forming a crystal instead of one
# 0.00.79 (54852) Aug 3, 2011
Micro tab: Made NO3- concentration bar blue because it represents a negative ion
Micro tab: Fixed exponent for the water/solution volume readout and show no water as 0L
Micro tab: Combined the "remove solute 1" and "remove solute 2" buttons into one "remove solutes" button
# 0.00.78 (54820) Aug 3, 2011
Micro tab: Dissolve particles from the edges instead of the center of the crystal
Micro tab: Maintain constituent ratio according to chemical formula during dissolve
# 0.00.77 (54806) Aug 3, 2011
Water tab: added more proguard keep statements