@@ -1,9 +1,11 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.common.view.faucet;
 
+import java.awt.TexturePaint;
 import java.awt.geom.Rectangle2D;
 import java.util.ArrayList;
 
+import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.Option;
@@ -14,6 +16,7 @@ import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PImage;
 
 import static edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsResources.Images.FAUCET_FRONT;
+import static edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsResources.Images.FAUCET_PIPE;
 
 /**
  * Faucet node for showing and controlling water flowing into and out of the beaker.
@@ -26,6 +29,10 @@ public class FaucetNode extends PNode {
     //Listeners for the shape of the water that flows out of the faucet
     private ArrayList<VoidFunction1<Rectangle2D>> listeners = new ArrayList<VoidFunction1<Rectangle2D>>();
 
+    //Locations where the left side of the faucet connects to the pipe, so that the pipe can be tiled beyond the faucet image
+    private final ImmutableVector2D inputPipeTopPoint = new ImmutableVector2D( 0, 32 );
+    private final ImmutableVector2D inputPipeBottomPoint = new ImmutableVector2D( 0, 77 );
+
     public FaucetNode(
 
             //Value between 0 and 1 inclusive to indicate the rate of flow
@@ -35,7 +42,10 @@ public class FaucetNode extends PNode {
             final Option<Double> flowPoint,
 
             //true if this faucet is allowed to add water.  The top faucet is allowed to add water if the beaker isn't full, and the bottom one can turn on if the beaker isn't empty.
-            final ObservableProperty<Boolean> allowed ) {
+            final ObservableProperty<Boolean> allowed,
+
+            //Length of the faucet input pipe in pixels
+            final double faucetLength ) {
 
         //Create the image and slider node used to display and control the faucet
         PImage imageNode = new PImage( FAUCET_FRONT ) {{
@@ -45,6 +55,10 @@ public class FaucetNode extends PNode {
 
             //Add the slider as a child of the image so it will receive the same scaling so it will stay in corresponding with the image area for the slider
             addChild( new FaucetSlider( allowed, flowRate ) );
+
+            //Show the pipe to the left of the faucet with a tiled image
+            final Rectangle2D.Double rect = new Rectangle2D.Double( -faucetLength + 1, inputPipeTopPoint.getY() - 0.5, faucetLength, inputPipeBottomPoint.getY() - inputPipeTopPoint.getY() + 1.5 );
+            addChild( new PhetPPath( rect, new TexturePaint( FAUCET_PIPE, new Rectangle2D.Double( 0, rect.getY(), FAUCET_PIPE.getWidth(), FAUCET_PIPE.getHeight() ) ) ) );
         }};
         final double imageWidth = imageNode.getFullBounds().getMaxX();
         final double imageHeight = imageNode.getFullBounds().getMaxY();
